attempting to fix background on mobile again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,10 +261,6 @@ footer.page-footer .footer-copyright {
   }
 
 @media only screen and (max-width: 601px) {
-  body {
-    background-attachment: scroll;
-  }
-
   #blog .card {
     flex-direction: column;
   }
